Fix issue making only one answer visible in normal level stage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     text-align: center;
     width: 100%;
     min-height: 100vh;
-    background-color: teal;
+    background-color: blue;
 }
 
 .padding {
@@ -29,6 +29,8 @@ body {
     color: whitesmoke;
     position: relative;
 }
+
+
 
 .btn-summary-page {
     border: none;
